Added check who's next & pass to bot. Set up schedule to check and send message to chat every working day at 10:20

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/dmk1111/google-skype-bot#readme",
   "dependencies": {
+    "botbuilder": "^3.14.0",
     "google-auth-library": "^0.12.0",
     "googleapis": "^24.0.0",
     "node-fetch": "^2.0.0",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "restify": "^6.3.4"
   }
 }
