--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   },
   "homepage": "https://github.com/dmk1111/google-skype-bot#readme",
   "dependencies": {
-    "botbuilder": "^3.14.0",
+    "botbuilder": "^3.13.1",
+    "botbuilder-azure": "^3.0.4",
     "google-auth-library": "^0.12.0",
     "googleapis": "^24.0.0",
     "node-fetch": "^2.0.0",
     "node-schedule": "^1.3.0",
-    "restify": "^6.3.4"
+    "restify": "^5.0.0",
+    "restify-errors": "^6.0.0"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "zip-folder": "^1.0.0"
   }
 }
