--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "googleapis": "^24.0.0",
     "node-fetch": "^2.0.0",
     "node-schedule": "^1.3.0",
+    "request": "^2.81.0",
     "restify": "^5.0.0",
-    "restify-errors": "^6.0.0"
+    "restify-errors": "^6.0.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "request": "^2.81.0",
     "zip-folder": "^1.0.0"
   }
 }
