--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "google-auth-library": "^0.12.0",
     "googleapis": "^24.0.0",
     "node-fetch": "^2.0.0",
-    "node-schedule": "^1.3.0",
+    "ontime": "0.0.4",
     "request": "^2.81.0",
     "restify": "^5.0.0",
     "restify-errors": "^6.0.0",
